2_application/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-app
  name: demo-app-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo-app
  type: ClusterIP
