2_application/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/v1beta1.FrontendConfig: http-to-https
  name: demo-app-ing
spec:
  rules:
  - host: app.example.com
    http:
      paths:
      - backend:
          service:
            name: demo-app-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - app.example.com
    secretName: demo-app-secret
